[package]
name        = "nix"
description = "Rust friendly bindings to *nix APIs"
edition     = "2018"
version     = "0.19.1"
authors     = ["The nix-rust Project Developers"]
repository  = "https://github.com/nix-rust/nix"
license     = "MIT"
categories  = ["os::unix-apis"]
exclude     = [
  "/.gitignore",
  "/.travis.yml",
  "/ci/*",
  "/Cross.toml",
  "/RELEASE_PROCEDURE.md",
  "/bors.toml"
]

[package.metadata.docs.rs]
targets = [
  "x86_64-unknown-linux-gnu",
  "aarch64-linux-android",
  "x86_64-apple-darwin",
  "aarch64-apple-ios",
  "x86_64-unknown-freebsd",
  "x86_64-unknown-openbsd",
  "x86_64-unknown-netbsd",
  "x86_64-unknown-dragonfly",
  "x86_64-unknown-redox"
]

[dependencies]
libc = { version = "0.2.78", features = [ "extra_traits" ] }
bitflags = "1.1"
cfg-if = "1.0"

[target.'cfg(target_os = "dragonfly")'.build-dependencies]
cc = "1"

[dev-dependencies]
bytes = "0.4.8"
lazy_static = "1.2"
rand = "0.6"
tempfile = "3.0.5"
semver = "0.9.0"

[target.'cfg(any(target_os = "android", target_os = "linux"))'.dev-dependencies]
caps = "0.3.1"

[target.'cfg(target_os = "freebsd")'.dev-dependencies]
sysctl = "0.1"

[[test]]
name = "test"
path = "test/test.rs"

[[test]]
name = "test-aio-drop"
path = "test/sys/test_aio_drop.rs"

[[test]]
name = "test-clearenv"
path = "test/test_clearenv.rs"

[[test]]
name = "test-lio-listio-resubmit"
path = "test/sys/test_lio_listio_resubmit.rs"

[[test]]
name = "test-mount"
path = "test/test_mount.rs"
harness = false

[[test]]
name = "test-ptymaster-drop"
path = "test/test_ptymaster_drop.rs"
