[package]

name        = "nix-test"
description = "Testing helpers for Nix"
version     = "0.0.1"
authors     = ["Carl Lerche <me@carllerche.com>"]
homepage    = "https://github.com/carllerche/nix-rust"
build       = "build.rs"
license     = "MIT"

[dependencies]
libc = "*"

[build-dependencies]
gcc = "0.3.8"
